MARWEB-608 jenkinsfile added integrationtest and release stage